@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.21 version.
 
 0.05 2015-09-17T23:41:44+02:00
  [Common]
